CSS/style.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: Arial, sans-serif;
}

body {
  line-height: 1.6;
  background-color: #e4e4e4;
  color: #2a2a2a;
  padding: 20px;
}


#darkButton{
  display: relative;
  background-color: rgb(255, 255, 255);
  border-radius: 10px;
  transition: ease-out 0.6s;
  border-color: white;
  width: 100px;
  color: #333;
}


header{
  text-align: center;
  background-color: white;
  color: #3e3e3e;
  padding: 30px 20px;
  margin-bottom: 8px;
  border-radius: 10px;
}

header h1 {
  font-size: 2.5rem;
}

header p {
  font-size: 1.2rem;
  color: #ccc;
}


#about {
  display: flex;
  gap: 20px;
  align-items: center;
  background: white;
  padding: 20px;
  border-radius: 10px;
  margin-bottom: 20px;
  flex-wrap: wrap;
}

#about img {
  width: 250px;
  height: 250px;
  border-radius: 200px;
  flex-shrink: 0;
}

#about p {
  flex: 1;
}

#footer{
  position: relative;
  left: 200px;
}

.dark-mode{
  background-color: #333;
  
}

.dark-mode #darkButton{
  background-color: #333;
  color: white;
  border: none;
  transition: 0.5s;
}
.dark-mode header{
  background-color: #333;
  color: white;
  transition: ease-in 0.5s;
}
.dark-mode section {
  background-color: #333;
  color: white;
  transition: ease-in 0.5s;
}

.dark-mode #about{
  background-color: #2a2a2a;
  color: white;
}
.dark-mode section h2{
  color: white;
}

.dark-mode #contact{
  background-color: #2a2a2a;
  color: white;
} 

.dark-mode #hobbies{
  background-color: #2a2a2a;
  color: white;
}

.dark-mode #contact h2{
  color: white;
}

.dark-mode #hobbies h2{
  color: white;
}

.dark-mode #footer{
  color: white;
}
section {
  background: white;
  padding: 20px;
  border-radius: 10px;
  margin-bottom: 20px;
}


#contact h2 {
  margin-bottom: 10px;
  color: #444;
}

#hobbies h2{
  margin-bottom: 10px;
  color: #444;
}

ul {
  list-style-type: square;
  padding-left: 20px;
}


@media (max-width: 768px) {
  #about {
    flex-direction: column;
    text-align: center;
  }

  #about img {
    width: 250px;
  }
  .darkLogo {
    width: 40px;
    height: 10%;
  }


}

